azurermps/3.8.0/AzureRM.KeyVault/index.md
---
Module Name: AzureRM.KeyVault
Module Guid: D48CF693-4125-4D2D-8790-1514F44CE325
Download Help Link: http://go.microsoft.com/fwlink/?linkid=390762
Help Version: 4.0.0.0
Locale: en-US
content_git_url: https://github.com/Azure/azure-powershell/blob/preview/src/ResourceManager/KeyVault/Commands.KeyVault/help/AzureRM.KeyVault.md
original_content_git_url: https://github.com/Azure/azure-powershell/blob/preview/src/ResourceManager/KeyVault/Commands.KeyVault/help/AzureRM.KeyVault.md
gitcommit: https://github.com/Azure/azure-powershell/blob/d0f66e5470993b1636c163da2f6f83c0692ce6b7
updated_at: 05/10/2017 17:05 PM
ms.date: 05/10/2017
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
manager: erickson-doug
open_to_public_contributors: true
ms.service: key-vault
Add-AzureKeyVaultCertificate: Key Vault
Add-AzureKeyVaultCertificateContact: Key Vault
Add-AzureKeyVaultKey: Key Vault
Backup-AzureKeyVaultKey: Key Vault
Backup-AzureKeyVaultSecret: Others
Get-AzureKeyVaultCertificate: Key Vault
Get-AzureKeyVaultCertificateContact: Key Vault
Get-AzureKeyVaultCertificateIssuer: Key Vault
Get-AzureKeyVaultCertificateOperation: Key Vault
Get-AzureKeyVaultCertificatePolicy: Key Vault
Get-AzureKeyVaultKey: Key Vault
Get-AzureKeyVaultSecret: Key Vault
Get-AzureRmKeyVault: Key Vault
Import-AzureKeyVaultCertificate: Key Vault
New-AzureKeyVaultCertificateAdministratorDetails: Key Vault
New-AzureKeyVaultCertificateOrganizationDetails: Key Vault
New-AzureKeyVaultCertificatePolicy: Key Vault
New-AzureRmKeyVault: Key Vault
Remove-AzureKeyVaultCertificate: Key Vault
Remove-AzureKeyVaultCertificateContact: Key Vault
Remove-AzureKeyVaultCertificateIssuer: Key Vault
Remove-AzureKeyVaultCertificateOperation: Key Vault
Remove-AzureKeyVaultKey: Key Vault
Remove-AzureKeyVaultSecret: Key Vault
Remove-AzureRmKeyVault: Key Vault
Remove-AzureRmKeyVaultAccessPolicy: Key Vault
Restore-AzureKeyVaultKey: Key Vault
Restore-AzureKeyVaultSecret: Others
Set-AzureKeyVaultCertificateAttribute: Key Vault
Set-AzureKeyVaultCertificateIssuer: Key Vault
Set-AzureKeyVaultCertificatePolicy: Key Vault
Set-AzureKeyVaultKeyAttribute: Key Vault
Set-AzureKeyVaultSecret: Key Vault
Set-AzureKeyVaultSecretAttribute: Key Vault
Set-AzureRmKeyVaultAccessPolicy: Key Vault
Stop-AzureKeyVaultCertificateOperation: Key Vault
Undo-AzureKeyVaultKeyRemoval: Others
Undo-AzureKeyVaultSecretRemoval: Others
Undo-AzureRmKeyVaultRemoval: Others
_isModulePage: true
---

# AzureRM.KeyVault Module
## Description
This topic displays help topics for the Azure Key Vault Cmdlets.

## AzureRM.KeyVault Cmdlets
### [Add-AzureKeyVaultCertificate](Add-AzureKeyVaultCertificate.md)
Adds a certificate to a key vault.

### [Add-AzureKeyVaultCertificateContact](Add-AzureKeyVaultCertificateContact.md)
Adds a contact for certificate notifications.

### [Add-AzureKeyVaultKey](Add-AzureKeyVaultKey.md)
Creates a key in a key vault or imports a key into a key vault.

### [Backup-AzureKeyVaultKey](Backup-AzureKeyVaultKey.md)
Backs up a key in a key vault.

### [Backup-AzureKeyVaultSecret](Backup-AzureKeyVaultSecret.md)
Backs up a secret in a key vault.

### [Get-AzureKeyVaultCertificate](Get-AzureKeyVaultCertificate.md)
Gets a certificate from a key vault.

### [Get-AzureKeyVaultCertificateContact](Get-AzureKeyVaultCertificateContact.md)
Gets contacts that are registered for certificate notifications for a key vault.

### [Get-AzureKeyVaultCertificateIssuer](Get-AzureKeyVaultCertificateIssuer.md)
Gets a certificate issuer for a key vault.

### [Get-AzureKeyVaultCertificateOperation](Get-AzureKeyVaultCertificateOperation.md)
Gets the status of a certificate operation.

### [Get-AzureKeyVaultCertificatePolicy](Get-AzureKeyVaultCertificatePolicy.md)
Gets the policy for a certificate in a key vault.

### [Get-AzureKeyVaultKey](Get-AzureKeyVaultKey.md)
Gets Key Vault keys.

### [Get-AzureKeyVaultSecret](Get-AzureKeyVaultSecret.md)
Gets the secrets in a key vault.

### [Get-AzureRmKeyVault](Get-AzureRmKeyVault.md)
Gets key vaults.

### [Import-AzureKeyVaultCertificate](Import-AzureKeyVaultCertificate.md)
Imports a certificate to a key vault.

### [New-AzureKeyVaultCertificateAdministratorDetails](New-AzureKeyVaultCertificateAdministratorDetails.md)
Creates an in-memory certificate administrator details object.

### [New-AzureKeyVaultCertificateOrganizationDetails](New-AzureKeyVaultCertificateOrganizationDetails.md)
Creates an in-memory certificate organization details object.

### [New-AzureKeyVaultCertificatePolicy](New-AzureKeyVaultCertificatePolicy.md)
Creates an in-memory certificate policy object.

### [New-AzureRmKeyVault](New-AzureRmKeyVault.md)
Creates a key vault.

### [Remove-AzureKeyVaultCertificate](Remove-AzureKeyVaultCertificate.md)
Removes a certificate from a key vault.

### [Remove-AzureKeyVaultCertificateContact](Remove-AzureKeyVaultCertificateContact.md)
Deletes a contact that is registered for certificate notifications from a key vault.

### [Remove-AzureKeyVaultCertificateIssuer](Remove-AzureKeyVaultCertificateIssuer.md)
Deletes a certificate issuer from a key vault.

### [Remove-AzureKeyVaultCertificateOperation](Remove-AzureKeyVaultCertificateOperation.md)
Deletes a certificate operation from a key vault.

### [Remove-AzureKeyVaultKey](Remove-AzureKeyVaultKey.md)
Deletes a key in a key vault.

### [Remove-AzureKeyVaultSecret](Remove-AzureKeyVaultSecret.md)
Deletes a secret in a key vault.

### [Remove-AzureRmKeyVault](Remove-AzureRmKeyVault.md)
Deletes a key vault.

### [Remove-AzureRmKeyVaultAccessPolicy](Remove-AzureRmKeyVaultAccessPolicy.md)
Removes all permissions for a user or application from a key vault.

### [Restore-AzureKeyVaultKey](Restore-AzureKeyVaultKey.md)
Creates a key in a key vault from a backed-up key.

### [Restore-AzureKeyVaultSecret](Restore-AzureKeyVaultSecret.md)
Creates a secret in a key vault from a backed-up secret.

### [Set-AzureKeyVaultCertificateAttribute](Set-AzureKeyVaultCertificateAttribute.md)
Modifies editable attributes of a certificate.

### [Set-AzureKeyVaultCertificateIssuer](Set-AzureKeyVaultCertificateIssuer.md)
Sets a certificate issuer in a key vault.

### [Set-AzureKeyVaultCertificatePolicy](Set-AzureKeyVaultCertificatePolicy.md)
Creates or updates the policy for a certificate in a key vault.

### [Set-AzureKeyVaultKeyAttribute](Set-AzureKeyVaultKeyAttribute.md)
Updates the attributes of a key in a key vault.

### [Set-AzureKeyVaultSecret](Set-AzureKeyVaultSecret.md)
Creates or updates a secret in a key vault.

### [Set-AzureKeyVaultSecretAttribute](Set-AzureKeyVaultSecretAttribute.md)
Updates attributes of a secret in a key vault.

### [Set-AzureRmKeyVaultAccessPolicy](Set-AzureRmKeyVaultAccessPolicy.md)
Grants or modifies existing permissions for a user, application, or security group to perform operations with a key vault.

### [Stop-AzureKeyVaultCertificateOperation](Stop-AzureKeyVaultCertificateOperation.md)
Cancels a certificate operation in key vault.

### [Undo-AzureKeyVaultKeyRemoval](Undo-AzureKeyVaultKeyRemoval.md)
Recovers a deleted key in a key vault into an active state.

### [Undo-AzureKeyVaultSecretRemoval](Undo-AzureKeyVaultSecretRemoval.md)
Recovers a deleted secret in a key vault into an active state.

### [Undo-AzureRmKeyVaultRemoval](Undo-AzureRmKeyVaultRemoval.md)
Recovers a deleted key vault into an active state.

